# Kestral

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  components.json  index.html  package-lock.json  package.json  start.bat  stop.bat  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  ErrorBoundary.tsx  SftpBrowser.tsx  SshTerminal.tsx  api.ts  index.css  main.tsx  reui-theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: approval.rs  audit.rs  commands.rs  error.rs  hosts.rs  lib.rs  main.rs  mcp.rs  model.rs  policy.rs  sftp.rs  skill.rs  skill_client.py  snippets.rs  ssh.rs  state.rs  terminal.rs  util.rs  vault.rs
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dot-field.tsx  input.tsx  select.tsx  sheet.tsx  shiny-text.tsx  sidebar.tsx  spinner.tsx  switch.tsx  table.tsx  tooltip.tsx
src/hooks/: use-mobile.ts
src/lib/: prefs.tsx  terminal-themes.ts
