[package]
name = "kestral"
version = "0.1.0"
description = "SSH client with an encrypted vault and a built-in MCP server for controlled AI access"
authors = ["Anton <antonkonig691@gmail.com>"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/antndev/Kestral"

[lib]
name = "kestral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"

rmcp = { version = "1.8", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
schemars = "1.0"
axum = "0.8"
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process"] }

thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = "0.3"

russh = { version = "0.61", default-features = false, features = ["ring"] }
russh-sftp = "2"

argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
subtle = "2"
